--- a/sakura/src/main/resources/application.properties
+++ b/sakura/src/main/resources/application.properties
@@ -1,5 +1,17 @@
+#端口号
 server.port=3001
 
 
+#开启html模板文件夹
 spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html
+#缓存
+spring.thymeleaf.cache=false
+#开启静态资源文件夹路径
+spring.mvc.static-path-pattern=/static/**
+
+
 
